--- a/View/App.xaml
+++ b/View/App.xaml
@@ -2,14 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:View"
-             StartupUri="MainWindow.xaml">
+             StartupUri="FrontEnd.xaml">
     <Application.Resources>
         <Style x:Key="WindowTemplatePopup"
                TargetType="Window">
             <Setter Property="ResizeMode"
                     Value="NoResize"></Setter>
             <Setter Property="Height"
-                    Value="280"></Setter>
+                    Value="280"></Setter> 
             <Setter Property="Width"
                     Value="520"></Setter>
             <Setter Property="Background"
