--- a/View/FrontEnd.xaml
+++ b/View/FrontEnd.xaml
@@ -113,7 +113,7 @@
                                     DisplayMemberBinding="{Binding Contractor.NumberOfType7PledgedVehicles}"
                                     Width="70"></GridViewColumn>
                     <GridViewColumn Header="Tid til rådighed"
-                                    DisplayMemberBinding="{Binding Contractor.Hours}"
+                                    DisplayMemberBinding="{Binding Hours}"
                                     Width="70"></GridViewColumn>
                     <!--<GridViewColumn Header="Pris"
                                     DisplayMemberBinding="{Binding winningOffers}"
